--- a/login.html
+++ b/login.html
@@ -37,11 +37,11 @@
 </div>
 
     <div class="contenedor_login-register">
-        <form action="" class="formulario-login">
+        <form id="form" class="formulario-login">
             <h2>Iniciar sesión</h2>
             <input id='usuario' type="text" placeholder="Usuario">
             <input id='contra' type="password" placeholder="Contraseña">
-            <button id="btn">Entrar</button>
+            <button id="submit">Entrar</button>
 
         </form>
 
