--- a/principal.html
+++ b/principal.html
@@ -14,6 +14,16 @@
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
+    <nav>
+      <a href="#">Bienvenido</a>
+      <button>
+        <div>
+          <div id="usernav">
+            <a href="#" id="close">Cerrar sesión</a>
+          </div>
+        </div>
+      </button>
+    </nav>
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
         <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
@@ -106,5 +116,6 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
     <script src="login.js"></script>
+    <script src="js/nav.js"></script>
   </body>
 </html>
