--- a/products.html
+++ b/products.html
@@ -27,6 +27,10 @@
     
     <img src="img/cover_back.png" class="banneR" >
     <h3 class="productosE">Todos los productos</h3>
+    <div>
+      <button onclick="des()">Precio</button>
+      <button onclick="asc()">Relevancia</button>
+    </div>
 
       <div>
         <table>
