--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
             <h2>Iniciar sesión</h2>
             <input id='usuario' type="text" placeholder="Usuario">
             <input id='contra' type="password" placeholder="Contraseña">
-            <button id="submit">Entrar</button>
+            <button type="submit" id=''>Entrar</button>
 
         </form>
 
@@ -50,8 +50,8 @@
             <h2>Registrarse</h2>
             <input type="text" placeholder="Nombre Completo">
             <input type="text" placeholder="Correo electronico">
-            <input type="text" placeholder="Usuario">
-            <input type="password"  placeholder="Contraseña">
+            <input type="text" placeholder="Usuuario">
+            <input type="password"  placeholder="contrasenia">
             <button>Registrarse</button>
         </form>
     </div>
@@ -63,6 +63,6 @@
   
   <script src="js/init.js"></script>
   <script src="js/login2.js"></script>
-  <script src="login.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
