--- a/principal.html
+++ b/principal.html
@@ -17,13 +17,15 @@
     <nav>
       <a href="#">Bienvenido</a>
       <button>
-        <div>
-          <div id="usernav">
-            <a href="#" id="close">Cerrar sesión</a>
-          </div>
-        </div>
+       <div>
+         <div>
+           <div id="usernav"></div>
+           <a href="#" id="close">cerrar sesión</a>
+         </div>
+       </div>
       </button>
     </nav>
+    
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
         <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
@@ -115,7 +117,7 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
-    <script src="login.js"></script>
     <script src="js/nav.js"></script>
+
   </body>
 </html>
