--- a/products.html
+++ b/products.html
@@ -28,8 +28,9 @@
     <img src="img/cover_back.png" class="banneR" >
     <h3 class="productosE">Todos los productos</h3>
     <div>
-      <button onclick="des()">Precio</button>
-      <button onclick="asc()">Relevancia</button>
+      <button id="asc">Mas caros</button>
+      <button id="asc2">Mas baratos</button>
+      <button id="desc">Relevantes</button>
     </div>
 
       <div>
