--- a/categories.html
+++ b/categories.html
@@ -12,13 +12,13 @@
     <link href="css/font-awesome.min.css" rel="stylesheet">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilomenu.css">
     <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/estilomenu.css">
   </head>
   <body>
     <nav>
       <ul>
-          <li><a  href="index.html">Inicio</a></li>
+          <li><a  href="principal.html">Inicio</a></li>
        
           <li><a href="categories.html">Categorías</a></li>
           <li><a href="products.html">Productos</a></li>
@@ -35,7 +35,6 @@
             </li>
       </ul>
   </nav>
-
     <main role="main" class="pb-5">
         <div class="text-center p-4">
             <h2>Categorías</h2>
