--- a/category-info.html
+++ b/category-info.html
@@ -19,7 +19,7 @@
 <body>
   <nav>
     <ul>
-        <li><a  href="index.html">Inicio</a></li>
+        <li><a  href="principal.html">Inicio</a></li>
      
         <li><a href="categories.html">Categorías</a></li>
         <li><a href="products.html">Productos</a></li>
@@ -36,7 +36,6 @@
           </li>
     </ul>
 </nav>
-
   <main role="main">
     <div class="container mt-5">
       <div class="text-center p-4">
