--- a/principal.html
+++ b/principal.html
@@ -18,7 +18,7 @@
 
     <nav>
       <ul>
-          <li><a  href="index.html">Inicio</a></li>
+          <li><a  href="principal.html">Inicio</a></li>
        
           <li><a href="categories.html">Categorías</a></li>
           <li><a href="products.html">Productos</a></li>
