--- a/product-info.html
+++ b/product-info.html
@@ -15,16 +15,16 @@
   <link href="css/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="css/star.css">
   <link rel="stylesheet" href="css/comentarios.css">
-  <link rel="stylesheet" href="css/estilomenu.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  <link rel="stylesheet" href="css/product-info.css">
  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;600&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="css/estilomenu.css">
 </head>
 
 <body>
   <nav>
     <ul>
-        <li><a  href="index.html">Inicio</a></li>
+        <li><a  href="principal.html">Inicio</a></li>
      
         <li><a href="categories.html">Categorías</a></li>
         <li><a href="products.html">Productos</a></li>
@@ -42,13 +42,15 @@
     </ul>
 </nav>
 
- 
+
  
 
   <div id="productitos"></div>
 
-<div class="containerCard">
+
+  <div class="containerCard"> 
   <div id="productosRelacionados"></div>
+ </div>
 </div>
 
 <div>
