--- a/sell.html
+++ b/sell.html
@@ -33,7 +33,7 @@
   <body>
     <nav>
       <ul>
-          <li><a  href="index.html">Inicio</a></li>
+          <li><a  href="principal.html">Inicio</a></li>
        
           <li><a href="categories.html">Categorías</a></li>
           <li><a href="products.html">Productos</a></li>
